Fix z-index

--- a/src/components/Widget/style.scss
+++ b/src/components/Widget/style.scss
@@ -25,7 +25,7 @@
   left: 0;
   right: 0;
   margin: 0;
-  z-index: 9999;
+  z-index: 1;
   display: flex;
   flex-direction: column;
 }
